# Pandora_plugin_libSGM

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: pandora_plugin_libsgm_ci.yml
conf/: sgm.json  sgm_python.json  sgm_python_parall.json  sgm_zncc.json  sgm_zncc_python.json  sgm_zncc_python_parall.json
doc/: Makefile  make.bat
doc/source/: api_reference.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  user_guide.rst
doc/source/api_reference/: modules.rst  plugin_libsgm.rst
doc/source/developer_guide/: before_coding.rst  penalty_and_invalid_value.rst
doc/source/getting_started/: installation.rst  quick_overview.rst
doc/source/user_guide/: usage.rst
pandora_plugin_libsgm/: __init__.py  abstract_sgm.py  lib_3sgm.py  lib_sgm.py  penalty.py  penalty_mc_cnn.py  penalty_sgm.py
pandora_plugin_libsgm/penalty/: __init__.py  penalty.py  penalty_mc_cnn.py  penalty_sgm.py
tests/: common.py  conftest.py  disable_test_plugin_python_parall.py  disp_ref_zncc.tif  disp_right_zncc.tif  disp_sec_zncc.tif  old_disp_left_zncc.tif  test_check_configuration.py  test_lib3sgm.py  test_libsgm.py  test_penality_sgm.py  test_penalty_mc_cnn.py  test_plugin.py  test_plugin_python.py  test_plugin_python_parall.py
tests/conf/: 3sgm.json  sgm.json  sgm_python.json  sgm_python_parall.json  sgm_zncc.json  sgm_zncc_python.json  sgm_zncc_python_parall.json
tests/functional_tests/: test_plugin_on_pandora.py
tests/inputs/: data_description.md  right_classif.tif
tests/outputs/: data_description.md  disp_right_zncc.tif  left_disparity_3sgm.tif  right_disparity_3sgm.tif
tests/testresources/conf/: 3sgm.json  sgm.json  sgm_confidence_double.json  sgm_python.json  sgm_python_parall.json  sgm_zncc.json  sgm_zncc_python.json  sgm_zncc_python_parall.json
tests/testresources/outputs/: data_description.md  disp_left_zncc.tif  disp_right_zncc.tif
