#!/usr/bin/env python
# coding: utf8
#
# Copyright (c) 2025 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of Pandora plugin LibSGM
#
#     https://github.com/CNES/Pandora_plugin_libsgm
#
# Licensed under the Apache License, Version 2.0 (the 'License');
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an 'AS IS' BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Pandora plugin LibSGM setup configuration file

# package setup main metadata
[metadata]
name = pandora_plugin_libsgm
description = Pandora plugin to optimize the cost volume with the LibSGM library
long_description_content_type = text/markdown
author = CNES
author_email = myriam.cournet@cnes.fr
url = https://github.com/CNES/Pandora_plugin_libsgm
license = Apache License 2.0
license_files = LICENSE

[options]
python_requires = >=3.8

setup_requires =
    setuptools_scm # Following https://pypi.org/project/setuptools-scm/

# Pandora plugin LibSGM packages dependencies
install_requires =
    numpy
    rasterio
    libsgm>=0.5.1
    pandora==1.7.2a1
    xarray
    json-checker
    importlib-metadata; python_version<"3.10"

package_dir =
    . = plugin_libsgm
packages = find:

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-resource-path
    pylint
    pre-commit
    mypy
    black
    types-setuptools
docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi

# Pandora plugin LibSGM entry points cli scripts
[options.entry_points]
pandora.plugin =
    pandora_plugin_libsgm = pandora_plugin_libsgm.lib_sgm:SGM
    pandora_plugin_lib_segsemsgm = pandora_plugin_libsgm.lib_3sgm:SEGSEMSGM
